--- a/todoapp.html
+++ b/todoapp.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Advanced To-Do List App</title>
+    <title> To-Do List App</title>
     <link rel="stylesheet" href="todoappcss.css">
 </head>
 <body>
     <div class="container">
-        <h1>Advanced To-Do List</h1>
+        <h1>To-Do List</h1>
         <div class="form">
             <input type="text" id="taskInput" placeholder="Enter a task...">
             <button onclick="addTask()">Add Task</button>
         </div>
         <ul id="taskList">
-            <!-- Tasks will be added here dynamically using JavaScript -->
         </ul>
     </div>
 
