--- a/todoapp.html
+++ b/todoapp.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> To-Do List App</title>
+    <title> The To-Do List App</title>
     <link rel="stylesheet" href="todoappcss.css">
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1>The To-Do List</h1>
         <div class="form">
             <input type="text" id="taskInput" placeholder="Enter a task...">
             <button onclick="addTask()">Add Task</button>
